fixed layout issues with new bootstrap-a-4 version

--- a/modules/sepal-server/frontend/src/components/nouislider/nouislider.css
+++ b/modules/sepal-server/frontend/src/components/nouislider/nouislider.css
@@ -26,6 +26,7 @@
     height: 100%;
     position: relative;
     z-index: 1; /* Fix 401 */
+    background: rgba(250, 250, 250, 0.25);
 }
 .noUi-origin {
     position: absolute;
